Prevent from control loading icon from overlapping

--- a/src/global_styling/mixins/_form.scss
+++ b/src/global_styling/mixins/_form.scss
@@ -115,7 +115,8 @@
 
 @mixin euiFormControlIsLoading($isNextToIcon: false) {
   @at-root {
-    #{&}-isLoading {
+    #{&}-isLoading,
+    #{&}-isLoading#{&}--compressed {
       @if ($isNextToIcon) {
         @include euiFormControlLayoutPadding(2);
       } @else {
